--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,10 +1,14 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1">
-      <ion-icon name="flash"></ion-icon>
-      <ion-label>Tab One</ion-label>
+    <ion-tab-button tab="tab1" href="/tabs/(news:news)">
+      <ion-icon name="Home"></ion-icon>
+      <ion-label>News</ion-label>
     </ion-tab-button>
+
+  <!-- <ion-tab label="News" icon="Home" href="/tabs/(news:news)">
+    <ion-router-outlet name="news"></ion-router-outlet>
+  </ion-tab> -->
 
     <ion-tab-button tab="tab2">
       <ion-icon name="apps"></ion-icon>
